--- a/project/package.json
+++ b/project/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.2.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "better-react-carousel": "^1.1.1",
     "bootstrap": "^4.6.0",
+    "chakra-react-select": "^4.0.3",
+    "framer-motion": "^6.3.13",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
@@ -15,6 +20,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.3.2",
     "swiper": "^8.2.4",
     "web-vitals": "^2.1.4"
   },
