--- a/project/package.json
+++ b/project/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "better-react-carousel": "^1.1.1",
     "bootstrap": "^4.6.0",
     "chakra-react-select": "^4.0.3",
