--- a/project/package.json
+++ b/project/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^0.27.2",
     "better-react-carousel": "^1.1.1",
     "bootstrap": "^4.6.0",
     "chakra-react-select": "^4.0.3",
