--- a/finalProject/project/package.json
+++ b/finalProject/project/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/standalone": "^7.18.5",
     "eslint": "^8.0.0",
     "eslint-config-react-app": "^7.0.1",
     "postcss": "^8.4.14",
