--- a/finalProject/project/package.json
+++ b/finalProject/project/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/helpers": "^7.18.2",
+    "@babel/runtime": "^7.18.3",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
@@ -10,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "7.5": "^1.0.0",
     "awesome": "^0.0.7",
     "bootstrap": "^4.6.1",
     "bootstrap-icons": "^1.8.3",
@@ -53,5 +56,8 @@
     "eslint-config-react-app": "^7.0.1",
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.0"
+  },
+  "resolutions": {
+    "@babel/plugin-proposal-object-rest-spread": "7.4.4"
   }
 }
