--- a/finalProject/project/package.json
+++ b/finalProject/project/package.json
@@ -55,7 +55,8 @@
     "eslint": "^8.0.0",
     "eslint-config-react-app": "^7.0.1",
     "postcss": "^8.4.14",
-    "postcss-loader": "^7.0.0"
+    "postcss-loader": "^7.0.0",
+    "webpack": "^5.73.0"
   },
   "resolutions": {
     "@babel/plugin-proposal-object-rest-spread": "7.4.4"
