--- a/finalProject/project/package.json
+++ b/finalProject/project/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "7.5": "^1.0.0",
+    "aos": "^2.3.4",
     "awesome": "^0.0.7",
     "bootstrap": "^4.6.1",
     "bootstrap-icons": "^1.8.3",
