--- a/project/package.json
+++ b/project/package.json
@@ -16,6 +16,7 @@
     "better-react-carousel": "^1.1.1",
     "bootstrap": "^4.6.1",
     "chakra-react-select": "^4.0.3",
+    "firebase": "^9.9.0",
     "framer-motion": "^6.3.13",
     "google-map-react": "^2.1.10",
     "google-maps-react": "^2.0.6",
@@ -27,6 +28,7 @@
     "react-chatbot-kit": "^2.0.1",
     "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-router": "^6.3.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
