--- a/project/package.json
+++ b/project/package.json
@@ -15,6 +15,7 @@
     "7.5": "^1.0.0",
     "aos": "^2.3.4",
     "awesome": "^0.0.7",
+    "axios": "^0.27.2",
     "bootstrap": "^4.6.1",
     "bootstrap-icons": "^1.8.3",
     "bootstrap4": "^0.0.1-security",
