--- a/project/package.json
+++ b/project/package.json
@@ -34,6 +34,7 @@
     "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-google-recaptcha": "^2.1.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
