--- a/project/package.json
+++ b/project/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^4.6.1",
     "bootstrap-icons": "^1.8.3",
     "chakra-react-select": "^4.0.3",
+    "exceljs": "^4.3.0",
     "firebase": "^9.9.0",
     "font-awesome": "^4.7.0",
     "framer-motion": "^6.3.13",
@@ -34,6 +35,7 @@
     "react-bulma-components": "^4.1.0",
     "react-chatbot-kit": "^2.0.1",
     "react-cool-onclickoutside": "^1.7.0",
+    "react-data-export": "^0.6.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-google-login": "^5.2.2",
