--- a/project/package.json
+++ b/project/package.json
@@ -21,6 +21,8 @@
     "bootstrap": "^4.6.1",
     "bootstrap-icons": "^1.8.3",
     "chakra-react-select": "^4.0.3",
+    "chart.js": "^3.8.0",
+    "d3": "^7.6.1",
     "exceljs": "^4.3.0",
     "firebase": "^9.9.0",
     "font-awesome": "^4.7.0",
@@ -33,8 +35,10 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-bulma-components": "^4.1.0",
+    "react-chartjs-2": "^4.3.1",
     "react-chatbot-kit": "^2.0.1",
     "react-cool-onclickoutside": "^1.7.0",
+    "react-d3-library": "^1.1.8",
     "react-data-export": "^0.6.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
